// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passed down onBlur and onFocus are called 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    data-testid="text-input"
  >
    <div
      class="MuiInputBase-root MuiInput-root root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        id="operator"
        type="text"
        value="hi"
      />
    </div>
  </div>
</div>
`;

exports[`render text field wrapper 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    data-testid="text-input"
  >
    <div
      class="MuiInputBase-root MuiInput-root root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        id="operator"
        placeholder="Test Placeholder"
        type="text"
        value="test value"
      />
    </div>
  </div>
</div>
`;

exports[`render text field wrapper with label, helperText, and readonly 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    data-testid="readonly-text-input"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-disabled Mui-disabled MuiFormLabel-filled"
      data-shrink="true"
      for="operator"
      id="operator-label"
    >
      test label
    </label>
    <div
      class="MuiInputBase-root MuiInput-root root Mui-disabled Mui-disabled disabled MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-describedby="operator-helper-text"
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input Mui-disabled Mui-disabled disabled"
        disabled=""
        id="operator"
        readonly=""
        type="text"
        value="test value"
      />
    </div>
    <p
      class="MuiFormHelperText-root Mui-disabled MuiFormHelperText-filled"
      id="operator-helper-text"
    >
      test helper text
    </p>
  </div>
</div>
`;

exports[`render text field wrapper with readonly as true show default value 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    data-testid="readonly-text-input"
  >
    <div
      class="MuiInputBase-root MuiInput-root root Mui-disabled Mui-disabled disabled MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input Mui-disabled Mui-disabled disabled"
        disabled=""
        id="operator"
        readonly=""
        type="text"
        value="-"
      />
    </div>
  </div>
</div>
`;

exports[`text field wrapper with readonly as true shows custom default value 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    data-testid="readonly-text-input"
  >
    <div
      class="MuiInputBase-root MuiInput-root root Mui-disabled Mui-disabled disabled MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input Mui-disabled Mui-disabled disabled"
        disabled=""
        id="operator"
        readonly=""
        type="text"
        value="blahhh"
      />
    </div>
  </div>
</div>
`;

exports[`text field wrapper with readonly as true shows custom default value 2`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    data-testid="readonly-text-input"
  >
    <div
      class="MuiInputBase-root MuiInput-root root Mui-disabled Mui-disabled disabled MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input Mui-disabled Mui-disabled disabled"
        disabled=""
        id="operator"
        readonly=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
